Fixes to Ur-Quan Masters app - added voice pack, and added many optimizations by passing -O2 flag to compiler, works great without any effort hehe

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">LBreakout2</string>
+    <string name="app_name">Ur-Quan Masters</string>
 </resources>
