--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1,4 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Alien Blaster</string>
+
+
+    <string name="init">Initializing</string>
+    <string name="please_wait">Please wait while data is being downloaded</string>
+
+    <string name="device_config">Device configuration</string>
+    <string name="device_change_cfg">Change device configuration</string>
+
+    <string name="download_unneeded">No need to download</string>
+    <string name="connecting_to">Connecting to %s</string>
+    <string name="failed_connecting_to">Failed connecting to %s</string>
+    <string name="error_connecting_to">Error connecting to %s</string>
+    <string name="dl_from">Downloading data from %s</string>
+    <string name="error_dl_from">Error downloading data from %s</string>
+    <string name="error_write">Error writing to %s</string>
+    <string name="dl_progress">%.0f%% done: file %s</string>
+    <string name="dl_finished">Finished</string>
+
+    <string name="storage_phone">Internal storage - %d MB free</string>
+    <string name="storage_sd">SD card storage - %d MB free</string>
+    <string name="storage_question">Where to download application data</string>
+    <string name="optional_downloads">Optional downloads</string>
+    <string name="ok">OK</string>
+
+    <string name="controls_arrows">Arrows / joystick / dpad</string>
+    <string name="controls_trackball">Trackball</string>
+    <string name="controls_accel">Accelerometer</string>
+    <string name="controls_touch">Touchscreen only</string>
+    <string name="controls_question">What kind of navigation keys does your device have?</string>
+
+    <string name="controls_additional">Additional controls to use</string>
+    <string name="controls_screenkb">On-screen keyboard</string>
+    <string name="controls_accelnav">Accelerometer as navigation keys</string>
+
+    <string name="controls_screenkb_size">On-screen keyboard size</string>
+    <string name="controls_screenkb_large">Large</string>
+    <string name="controls_screenkb_medium">Medium</string>
+    <string name="controls_screenkb_small">Small</string>
+    <string name="controls_screenkb_tiny">Tiny</string>
+    <string name="controls_screenkb_theme">On-screen keyboard theme</string>
+    <string name="controls_screenkb_by">%s by %s</string>
+
+    <string name="trackball_no_dampening">No dampening</string>
+    <string name="trackball_fast">Fast</string>
+    <string name="trackball_medium">Medium</string>
+    <string name="trackball_slow">Slow</string>
+    <string name="trackball_question">Trackball dampening</string>
+
+    <string name="accel_fast">Fast</string>
+    <string name="accel_medium">Medium</string>
+    <string name="accel_slow">Slow</string>
+    <string name="accel_question">Accelerometer sensitivity</string>
+
+    <string name="audiobuf_small">Small (fast devices, less lag)</string>
+    <string name="audiobuf_medium">Medium</string>
+    <string name="audiobuf_large">Large (if sound is choppy)</string>
+    <string name="audiobuf_question">Size of audio buffer</string>
+
 </resources>
