Now you can put data files inside .apk file, into assets - they will be unpacked automatically via omnipotent DataDownloader.java

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">enigma</string>
+    <string name="app_name">Alien Blaster</string>
 
 
     <string name="init">Initializing</string>
