--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Alien Blaster</string>
+    <string name="app_name">enigma</string>
 
 
     <string name="init">Initializing</string>
@@ -54,9 +54,10 @@
     <string name="accel_slow">Slow</string>
     <string name="accel_question">Accelerometer sensitivity</string>
 
-    <string name="audiobuf_small">Small (fast devices, less lag)</string>
+    <string name="audiobuf_verysmall">Very small (fast devices, less lag)</string>
+    <string name="audiobuf_small">Small</string>
     <string name="audiobuf_medium">Medium</string>
-    <string name="audiobuf_large">Large (if sound is choppy)</string>
+    <string name="audiobuf_large">Large (older devices, if sound is choppy)</string>
     <string name="audiobuf_question">Size of audio buffer</string>
 
 </resources>
