Fixed accelerometer joystick, added on-screen keyboard DPAD acting as a joystick

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -54,6 +54,11 @@
     <string name="accel_slow">Slow</string>
     <string name="accel_question">Accelerometer sensitivity</string>
 
+    <string name="accel_floating">Floating</string>
+    <string name="accel_fixed_start">Fixed when application starts</string>
+    <string name="accel_fixed_horiz">Fixed to table desk orientation</string>
+    <string name="accel_question_center">Accelerometer center position</string>
+
     <string name="audiobuf_verysmall">Very small (fast devices, less lag)</string>
     <string name="audiobuf_small">Small</string>
     <string name="audiobuf_medium">Medium</string>
