--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -64,7 +64,8 @@
     <string name="rightclick_multitouch">Touch screen with second finger</string>
     <string name="rightclick_pressure">Touch screen with force</string>
 
-    <string name="pointandclick_question">Advanced point-and-click features</string>
+    <string name="pointandclick_question">Advanced features</string>
+    <string name="pointandclick_keepaspectratio">Keep 4:3 acreen aspect ratio</string>
     <string name="pointandclick_showcreenunderfinger">Show screen under finger in separate window</string>
     <string name="pointandclick_usepressure">Left click triggered by touch force</string>
     <string name="pointandclick_multitouch">Left click triggered by touch with second finger</string>
