--- a/project/java/translations/values-fr/strings.xml
+++ b/project/java/translations/values-fr/strings.xml
@@ -61,4 +61,15 @@
     <string name="audiobuf_medium">Moyenne</string>
     <string name="audiobuf_large">Grande (en cas de son par saccades)</string>
     <string name="audiobuf_question">Taille du tampon audio</string>
+<string name="rightclick_question">Faites un clic droit déclenchée par:</string>
+<string name="rightclick_menu">Sur la touche Menu</string>
+<string name="rightclick_multitouch">écran tactile avec le deuxième doigt</string>
+<string name="rightclick_pressure">écran tactile avec une force</string>
+<string name="pointandclick_question">Les fonctionnalités avancées</string>
+<string name="pointandclick_keepaspectratio">Gardez format 4:3 écran</string>
+<string name="pointandclick_showcreenunderfinger">Afficher l\u0026#39;écran sous le doigt dans une fenêtre séparée</string>
+<string name="pointandclick_usepressure">Clic gauche déclenchée par la force touch</string>
+<string name="pointandclick_multitouch">Clic gauche déclenchée par contact avec le deuxième doigt</string>
+<string name="measurepressure_touchplease">S\u0026#39;il vous plaît glisser les doigts sur l\u0026#39;écran pendant deux secondes</string>
+<string name="measurepressure_response">% 03d% 03d pression rayon</string>
 </resources>
