--- a/project/java/translations/values-fi/strings.xml
+++ b/project/java/translations/values-fi/strings.xml
@@ -58,4 +58,15 @@
 <string name="accel_fixed_horiz">Korjattu taulukko työpöytä suuntautumiseen</string>
 <string name="accel_question_center">Kiihtyvyysmittari keskiasentoon</string>
 <string name="audiobuf_verysmall">Hyvin pieni (nopea laitteita, vähemmän lag)</string>
+<string name="rightclick_question">Napsauta hiiren kakkospainikkeella alkunsa:</string>
+<string name="rightclick_menu">Valikkonäppäin</string>
+<string name="rightclick_multitouch">Kosketusnäyttö on toinen sormi</string>
+<string name="rightclick_pressure">Kosketusnäyttö voimalla</string>
+<string name="pointandclick_question">Lisäominaisuudet</string>
+<string name="pointandclick_keepaspectratio">Pidä 04:03 kuvasuhde</string>
+<string name="pointandclick_showcreenunderfinger">Näytä näytön alle sormi erillisessä ikkunassa</string>
+<string name="pointandclick_usepressure">Vasen klikkaus laukaisi kosketus voima</string>
+<string name="pointandclick_multitouch">Vasen klikkaus laukaisi yhteyden toinen sormi</string>
+<string name="measurepressure_touchplease">Ole hyvä ja liu\u0026#39;uttamalla sormea näytöllä kaksi sekuntia</string>
+<string name="measurepressure_response">Paine% 03D säde% 03D</string>
 </resources>
