--- a/project/java/translations/values-fr/strings.xml
+++ b/project/java/translations/values-fr/strings.xml
@@ -68,7 +68,14 @@
 <string name="pointandclick_question">Les fonctionnalités avancées</string>
 <string name="pointandclick_keepaspectratio">Gardez format 4:3 écran</string>
 <string name="pointandclick_showcreenunderfinger">Afficher l\u0026#39;écran sous le doigt dans une fenêtre séparée</string>
-<string name="pointandclick_usepressure">Clic gauche déclenchée par la force touch</string>
-<string name="pointandclick_multitouch">Clic gauche déclenchée par contact avec le deuxième doigt</string>
 <string name="measurepressure_touchplease">S\u0026#39;il vous plaît glisser les doigts sur l\u0026#39;écran pendant deux secondes</string>
+<string name="rightclick_none">cliquez sur Désactiver droit de la souris</string>
+<string name="leftclick_question">cliquez gauche de la souris:</string>
+<string name="leftclick_normal">Normal</string>
+<string name="leftclick_near_cursor">curseur de la souris près Touch</string>
+<string name="leftclick_multitouch">écran tactile avec le deuxième doigt</string>
+<string name="leftclick_pressure">écran tactile avec une force</string>
+<string name="leftclick_dpadcenter">Trackball cliquez / touche de sélection</string>
+<string name="pointandclick_joystickmouse">Déplacez la souris ou un trackball avec joystick</string>
+<string name="measurepressure_response">pression %03d rayon %03d</string>
 </resources>
