New happy shiny and totally not ugly startup menu dialog.

--- a/project/java/translations/values-de/strings.xml
+++ b/project/java/translations/values-de/strings.xml
@@ -58,7 +58,7 @@
 <string name="accel_fixed_horiz">Fixiert auf Tisch Schreibtisch Orientierung</string>
 <string name="accel_question_center">Beschleunigungsmesser Mittelstellung</string>
 <string name="audiobuf_verysmall">Sehr kleine (schnelle Geräte, weniger Verzögerung)</string>
-<string name="rightclick_question">Rechter Mausklick ausgelöst durch:</string>
+<string name="rightclick_question">Rechter Mausklick ausgelöst durch</string>
 <string name="rightclick_menu">Menütaste</string>
 <string name="rightclick_multitouch">Touch-Screen mit dem zweiten Finger</string>
 <string name="rightclick_pressure">Touchscreen mit Kraft</string>
@@ -67,7 +67,7 @@
 <string name="pointandclick_showcreenunderfinger">Show-Bildschirm unter dem Finger in einem separaten Fenster</string>
 <string name="measurepressure_touchplease">Bitte schieben Sie den Finger über den Bildschirm für zwei Sekunden</string>
 <string name="rightclick_none">Deaktivieren der rechten Maustaste</string>
-<string name="leftclick_question">Linke Maustaste:</string>
+<string name="leftclick_question">Linke Maustaste</string>
 <string name="leftclick_normal">Normal</string>
 <string name="leftclick_near_cursor">Tippen Sie auf nahe Mauszeiger</string>
 <string name="leftclick_multitouch">Touch-Screen mit dem zweiten Finger</string>
